// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffStat expandedCounts 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      aria-label="3 additions, 5 deletions"
      class="diffStat"
      role="note"
    >
      <strong
        class="mr-1 a11y-ignore text-success"
      >
        +3
      </strong>
      <strong
        class="a11y-ignore text-danger"
      >
        −5
      </strong>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DiffStat standard 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      aria-label="3 additions, 5 deletions"
      class="diffStat"
      role="note"
    >
      <small>
        8
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DiffStatSquares 1`] = `
<DocumentFragment>
  <div
    class="squares"
  >
    <div
      class="square bg-success"
    />
    <div
      class="square bg-danger"
    />
    <div
      class="square bg-danger"
    />
    <div
      class="square bg-danger"
    />
    <div
      class="square bg-danger"
    />
  </div>
</DocumentFragment>
`;

exports[`DiffStatStack 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column align-items-center"
  >
    <div
      class="pb-1"
    >
      <div
        aria-label="3 additions, 5 deletions"
        class="diffStat"
        role="note"
      >
        <strong
          class="mr-1 a11y-ignore text-success"
        >
          +3
        </strong>
        <strong
          class="a11y-ignore text-danger"
        >
          −5
        </strong>
      </div>
    </div>
    <div
      class="squares"
    >
      <div
        class="square bg-success"
      />
      <div
        class="square bg-danger"
      />
      <div
        class="square bg-danger"
      />
      <div
        class="square bg-danger"
      />
      <div
        class="square bg-danger"
      />
    </div>
  </div>
</DocumentFragment>
`;
